crates/parser/tests/snapshots/block_string/chomp_strip.snap
---
source: crates/parser/tests/snapshots_block_string.rs
---
# block_string/chomp_strip

## Input

```
key |-
  line 1
  line 2

```

## CST

```
SOURCE_FILE@0..25
  ENTRY@0..24
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..24
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..15
        STRING@9..15 "line 1"
      NEWLINE@15..16 "\n"
      SPACE@16..18 "  "
      LINE_STRING@18..24
        STRING@18..24 "line 2"
  NEWLINE@24..25 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: STRING@9..15 "line 1",
                    },
                    LineString {
                        string: STRING@18..24 "line 2",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
