crates/parser/tests/snapshots/block_string/empty_line.snap
---
source: crates/parser/tests/snapshots_block_string.rs
---
# block_string/empty_line

## Input

```
foo |

  a

```

## CST

```
SOURCE_FILE@0..11
  ENTRY@0..10
    WORD_KEY@0..3
      WORD@0..3 "foo"
    SPACE@3..4 " "
    BLOCK_STRING@4..10
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      LINE_STRING@6..6
      NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..10
        STRING@9..10 "a"
  NEWLINE@10..11 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "foo",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@9..10 "a",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
